--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,16 +7,17 @@
 <title>Fr13ndSh!T.</title>
 <link rel="apple-touch-icon" type="image/jpg" href="https://esportgamw77.000webhostapp.com/zayn-picsay.jpg" />
 <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:100,300,400,400i|Titan+One" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="Fr13ndSh!T">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/all.css'>
 <style>
+	/*XerXez7 - Fr13ndSh!T*/
 body {
 	width: 100%;
 	height: 100vh;
 	margin: 0;
 	padding: 0;
-	background: url('https://esportgamw77.000webhostapp.com/zayn-picsay.jpg');
+    background: url('https://esportgamw77.000webhostapp.com/zayn-picsay.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -96,6 +98,22 @@ header nav ul .buy:hover {
 header nav ul .active {
 	border-bottom: 2px solid;
 }
+header nav .logo {
+	-webkit-box-flex: 1;
+	    -ms-flex: 1;
+	        flex: 1;
+	color: #fff;
+	margin-top: 6px;
+	margin-left: 10px;
+}
+
+header nav .logo h1 {
+	font-weight: 900;
+	font-family: 'Roboto', sans-serif;
+}
+header nav .logo h1 span {
+	font-weight: 100;
+}
 
 .middle-header {
 	width: 100%;
@@ -165,8 +183,8 @@ header nav ul .active {
 	transition: 200ms ease-in-out;
 }
 .middle-header .main button:hover {
-	color: #6d4603;
-	background: #ffffff;
+	color: #fa3380;
+	background: #fff;
 	text-transform: uppercase;
 }
 .middle-header .main .line {
@@ -199,19 +217,27 @@ header nav ul .active {
 <body translate="no">
 <header>
 <nav>
+<div class="logo">
+<h1>Fr13nd<span> | Sh!T</span></h1>
+</div>
+<ul class="pages">
+<a href="#XerXez7" target="_blank"><li class="active">Home</li></a>
+<a href="/About"><li>About</li></a>
+<a href="/Follow"><li>Follow</li></a>
+<a href="/Member"><li class="buy">Mem</li></a>
+</ul>
 </nav>
 </header>
 
 <div class="middle-header">
-	
 <div class="main">
+
 	<img src="https://esportgamw77.000webhostapp.com/fp.png">
 		<br><br><br><br><br>
 <div class="line"></div>
-<p>“Fr13ndSh!T. Web anda sangat rentan ter deface."<br><font color="white"><center>Tolong perbaiki dan folow instagram kami <br /> &copy; Fr13ndSh!T </center></font></p>
+<p>“Fr13ndSh!T. Welcom di webshet resmi kami"<br><font color="white"><center>Kami ada karna kami keluarga <br /> &copy; Fr13ndSh!T </center></font></p>
 <a href="https://instagram.com/friendshit_office" target="_blank"><button>Follow Me</button></a>
 </div>
 </div>
-
 </body>
 </html>
