--- a/Member/index.html
+++ b/Member/index.html
@@ -221,7 +221,7 @@ header nav .logo h1 span {
 <h1>Fr13nd<span> | Sh!T</span></h1>
 </div>
 <ul class="pages">
-<a href="#XerXez7" target="_blank"><li>Home</li></a>
+<a href="https://friendshit.github.io/" target="_blank"><li>Home</li></a>
 <a href="/About"><li>About</li></a>
 <a href="/Follow"><li>Follow</li></a>
 <a href="/Member"><li class="buy">Mem</li></a>
