--- a/bulan/index.html
+++ b/bulan/index.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy 6 month</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="shortcut icon" type="image/png" href="/bulan/img/aqil.jpg" />
+  <link rel="stylesheet" href="/bulan/style/style.css">
 
 </head>
 
@@ -49,8 +48,8 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="/bulan/img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
+      <img src="/bulan/img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Heppy 6 month!</h3>
         <h5 id="wishText">Hari yang sepesyal bagi kita :)</h5>
@@ -58,40 +57,40 @@
     </div>
     <div class="seven">
       <div class="baloons">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="/img/aqil.jpg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/aqil.jpg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon2.svg" alt="">
+        <img src="/bulan/img/ballon1.svg" alt="">
+        <img src="/bulan/img/ballon3.svg" alt="">
       </div>
     </div>
     <div class="eight">
@@ -141,13 +140,13 @@
       </svg>
     </div>
     <div class="nine">
-<p><img src="/img/aqil.jpg"></p>
+<p><img src="/bulan/img/aqil.jpg"></p>
       <p id="replay">Ailopyu. ketukdimana saja untuk memutar</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-<script type="application/javascript" src="script/main.js"></script>
+<script type="application/javascript" src="/bulan/script/main.js"></script>
 
 </html>
